--- a/app.json
+++ b/app.json
@@ -1,22 +1,31 @@
 {
   "expo": {
-    "name": "bolt-expo-nativewind",
-    "slug": "bolt-expo-nativewind",
+    "name": "BillPilot",
+    "slug": "billpilot",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "scheme": "billpilot",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "description": "Take control of your bills and subscriptions",
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.billpilot.app"
+    },
+    "android": {
+      "package": "com.billpilot.app",
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/icon.png",
+        "backgroundColor": "#3B82F6"
+      }
     },
     "web": {
       "bundler": "metro",
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font", "expo-web-browser"],
+    "plugins": ["expo-router", "expo-font", "expo-web-browser", "expo-notifications"],
     "experiments": {
       "typedRoutes": true
     }
