--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@lucide/lab": "^0.1.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "axios": "^1.11.0",
     "expo": "^53.0.20",
     "expo-blur": "~14.1.3",
     "expo-camera": "~16.1.5",
@@ -21,6 +23,7 @@
     "expo-haptics": "~14.1.3",
     "expo-linear-gradient": "~14.1.3",
     "expo-linking": "~7.1.3",
+    "expo-notifications": "~0.31.4",
     "expo-router": "~5.0.2",
     "expo-splash-screen": "~0.30.6",
     "expo-status-bar": "~2.2.2",
@@ -39,8 +42,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.8",
-    "expo-notifications": "~0.31.4"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
