--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "^0.7.1",
+    "firebase": "^10.7.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
