--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.11.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "expo": "^54.0.29",
     "expo-blur": "~15.0.8",
     "expo-camera": "~17.0.10",
@@ -31,6 +33,7 @@
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
+    "express": "^5.2.1",
     "firebase": "^12.6.0",
     "lucide-react-native": "^0.475.0",
     "react": "19.1.0",
@@ -49,8 +52,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "@types/react": "~19.1.10",
     "@types/react-native": "^0.72.8",
+    "nodemon": "^3.1.11",
+    "ts-node": "^10.9.2",
     "typescript": "~5.9.2"
   }
 }
