--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@firebase/auth": "^1.11.1",
     "@lucide/lab": "^0.1.2",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "^8.5.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.11.0",
